# clipvault

./: .gitignore  Cargo.toml  README.md  clips.db
assets/: clipvault-build.iss
src/: clipboard.rs  db.rs  gui.rs  lib.rs  main.rs  settings.rs
src/models/: clip.rs  mod.rs  tag.rs  ui_state.rs
src/ui/: mod.rs
src/ui/components/: clip_card.rs  main_top_panel.rs  mod.rs  tag_card.rs  top_panel.rs
src/ui/popups/: create_clip.rs  create_tag.rs  edit_tag_name.rs  mod.rs  tag_assignment.rs
src/ui/views/: main_view.rs  mod.rs  settings_view.rs  tag_filter_view.rs
src/utils/: formatting.rs
