[package]
name = "clipvault"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clipvault"
path = "src/main.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[lib]
name = "clipvault"
path = "src/lib.rs"

[dependencies]
tray-icon = "0.14"
winit = "0.29"
image = "0.24"
eframe = "0.32"
egui = "0.32"
egui_extras = { version = "0.32", features = ["datepicker", "chrono"] }
rusqlite = { version = "0.30", features = ["bundled"] }
arboard = "3.6"   # clipboard access crate
copypasta = "0.6"
chrono = "0.4.41"
toml = "0.8"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
single-instance = "0.3"
